--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,6 +1,7 @@
 global:
-  scrape_interval: 5s
+  scrape_interval: 15s
+
 scrape_configs:
-  - job_name: "meu_app_flask"
+  - job_name: 'fastapi'
     static_configs:
-      - targets: ["app:5000"]
+      - targets: ['app:8000']
